Fixes font size on mobile.

--- a/css/styles.css
+++ b/css/styles.css
@@ -95,6 +95,10 @@ h1 {
 }
 
 @media only screen and (max-width: 720px) {
+  html {
+    font-size: 0.6rem;
+  }
+
   #projects {
     .project-tile {
       width: 80%;
